--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,8 @@ jobs:
               fi
             fi
             if [ -f docker-compose.yml ]; then
-              sudo docker-compose down
-              sudo docker-compose up -d --build
+              sudo docker compose down
+              sudo docker compose up -d --build
             else
               echo "Error: docker-compose.yml not found!"
               exit 1
