--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - db
     environment:
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      - VIRTUAL_HOST=${DOMAIN}
+      - LETSENCRYPT_HOST=${DOMAIN}
+      - LETSENCRYPT_EMAIL=${EMAIL}
     env_file:
       - .env
     command: [ "python", "app.py" ]
@@ -28,24 +31,10 @@ services:
     env_file:
       - .env
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx_webserver
-    restart: always
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    environment:
-      VIRTUAL_HOST: ${DOMAIN}
-      LETSENCRYPT_HOST: ${DOMAIN}
-      LETSENCRYPT_EMAIL: ${EMAIL}
-    env_file:
-      - .env
-
   nginx-proxy:
     image: jwilder/nginx-proxy
     container_name: nginx_proxy
+    restart: always
     ports:
       - "80:80"
       - "443:443"
@@ -58,6 +47,7 @@ services:
   letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
     container_name: letsencrypt
+    restart: always
     environment:
       NGINX_PROXY_CONTAINER: nginx_proxy
     volumes:
