update domain in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ events {}
 http {
     server {
         listen 80;
-        server_name fuckingtodo.ir;
+        server_name todomodo.ir;
 
         location / {
             proxy_pass http://web:8000;
