--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - LETSENCRYPT_EMAIL=${EMAIL}
     env_file:
       - .env
-    command: [ "python", "app.py" ]
+    command: [ "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000" ]
 
   db:
     image: postgres:16
