--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - todo_postgres_data:/var/lib/postgresql/data
     env_file:
       - .env
 
@@ -56,4 +56,4 @@ services:
 
 volumes:
   postgres_data:
-    name: postgres_data
+    name: todo_postgres_data
