--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,19 @@ services:
       - ./nginx/vhost.d:/etc/nginx/vhost.d
       - ./nginx/html:/usr/share/nginx/html
 
+  backup:
+    image: postgres:16
+    container_name: db_backup
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./backup:/backup
+    entrypoint: |
+      bash -c 'while true; do /backup/backup.sh; sleep 3600; done'
+
 volumes:
   postgres_data:
     name: postgres_data
