--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.SERVER_IP }} << 'EOF'
             if [ ! -d /var/www/todo ]; then
               sudo mkdir -p /var/www/todo
-              sudo chown -R $USER:$USER /var/www/todo  # Change ownership to current user
+              sudo chown -R $USER:$USER /var/www/todo
               cd /var/www/todo
               sudo git clone https://github.com/Mee1ad/to-do.git .
             else
@@ -35,8 +35,7 @@ jobs:
               fi
             fi
             if [ -f docker-compose.yml ]; then
-              sudo docker compose down
-              sudo docker compose up -d --build
+              sudo docker compose restart web --do-deps
             else
               echo "Error: docker-compose.yml not found!"
               exit 1
