--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,16 @@ jobs:
                 sudo git clone https://github.com/Mee1ad/to-do.git .
               fi
             fi
+
             if [ -f docker-compose.yml ]; then
-              sudo docker compose restart web
+              # Check if any Docker container is running
+              if [ "$(sudo docker ps -q)" ]; then
+                echo "Containers are running, restarting the web service..."
+                sudo docker compose restart web
+              else
+                echo "No containers running, starting with docker compose up -d..."
+                sudo docker compose up -d
+              fi
             else
               echo "Error: docker-compose.yml not found!"
               exit 1
