--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
               # Check if any Docker container is running
               if [ "$(sudo docker ps -q)" ]; then
                 echo "Containers are running, restarting the web service..."
-                sudo docker compose restart web
+                sudo docker compose up -d --build --no-deps web
               else
                 echo "No containers running, starting with docker compose up -d..."
                 sudo docker compose up -d
