add run permission for db backup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./backup:/backup
     entrypoint: |
-      bash -c 'while true; do /backup/backup.sh; sleep 3600; done'
+       bash -c 'chmod +x /backup/backup.sh && while true; do /backup/backup.sh; sleep 3600; done'
 
 volumes:
   postgres_data:
