allow python to connect db

--- a/db/pg_hba.conf
+++ b/db/pg_hba.conf
@@ -1,2 +1,3 @@
 # TYPE  DATABASE  USER  ADDRESS           METHOD
+host    all       all   172.18.0.0/16      md5
 host    all       all   213.155.98.201/32  md5
