--- a/db/pg_hba.conf
+++ b/db/pg_hba.conf
@@ -1,3 +1,4 @@
 # TYPE  DATABASE  USER  ADDRESS           METHOD
+local   all             all                md5
 host    all       all   172.18.0.0/16      md5
 host    all       all   213.155.98.201/32  md5
