--- a/db/pg_hba.conf
+++ b/db/pg_hba.conf
@@ -1,4 +1,5 @@
 # TYPE  DATABASE  USER  ADDRESS           METHOD
 local   all             all                md5
-host    all       all   172.18.0.0/16      md5
-host    all       all   213.155.98.201/32  md5
+host    all       all   172.18.0.0/16      md5  # docker
+host    all       all   213.155.98.201/32  md5  # office
+host    all       all   85.103.84.120/32   md5  # home
